--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,10 @@ deploy:
   branch: master
 
 algolia:
-  applicationID: 'FWXTLLN24O'
-  apiKey: '9fe78ed368d4c017f33c16a170ce10a0'
-  adminApiKey: '8497682cec675ee57e29c86c41956994'
-  indexName: 'leunggeorge_github_blog'
+  applicationID: FWXTLLN24O
+  apiKey: 9fe78ed368d4c017f33c16a170ce10a0
+  adminApiKey: 8497682cec675ee57e29c86c41956994
+  indexName: dev_jobbymsblog
   chunkSize: 5000
+  fields:
+    - title
