--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 # Site
 title: 七点一刻的魔法书
-subtitle: 没有什么事儿是一句话讲不明白的。如果有，那就写篇博客！
+subtitle: 魔法书里面记载了许多“召唤术”，可以召唤天使或者精灵为自己服务。 
 description: day day up
 author: 七点一刻
 language: zh-Hans
@@ -132,7 +132,7 @@ index_generator:
 
 
 archive_generator:
-  per_page: 20
+  per_page: 10
   yearly: true
   monthly: true
 
