--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/LeungGeorge/LeungGeorge.github.io.git
+  repository: git@github.com:LeungGeorge/LeungGeorge.github.io.git
   branch: master
 
 # Algolia Search API Key
