--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -236,8 +236,8 @@ excerpt_description: true
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
-  length: 512
+  enable: true
+  length: 100
 
 # Post meta display settings
 post_meta:
