--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -415,7 +415,7 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: true
+  enable: false
   app_id: mKfzfMPBFU4kNOQRwVnAziVg-gzGzoHsz
   app_key: 6t4P3ILBwvJF2hgBHGrGSG1T
 
