--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ avatar: https://avatars2.githubusercontent.com/u/9783818?v=3&u=e2bb1f397cfd1d212
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://leunggeorge.github.io/
 root: /
-permalink: :year/:month/:day/:title/
+# permalink: :year/:month/:day/:title/
+permalink: :title.html
 permalink_defaults:
 
 # Directory
