--- a/_admin-config.yml
+++ b/_admin-config.yml
@@ -1,6 +1,6 @@
 options:
   lineNumbers: true
-  imagePrefix: leunggeorge.github.io-image-
+  imagePrefix: liangyuanzheng.com
   askImageFilename: false
   spellcheck: true
 editor:
