--- a/_admin-config.yml
+++ b/_admin-config.yml
@@ -1,6 +1,6 @@
 options:
   lineNumbers: true
-  imagePrefix: liangyuanzheng.com
+  imagePrefix: liangyuanzheng.com.image
   askImageFilename: false
   spellcheck: true
 editor:
