--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 
 
 # Site
-title: 魔法书
+title: 七点一刻的魔法书
 subtitle: 书里面记载了许多召唤术，可以召唤天使或者精灵为自己服务 
-description: day day up
+description: 书里面记载了许多召唤术，可以召唤天使或者精灵为自己服务 
 author: 七点一刻
 language: zh-Hans
 timezone: Asia/Shanghai
