--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "acorn": "^7.3.1",
         "ajv": "^6.10.2",
         "eslint": "^6.5.1",
+        "gitment": "^0.0.3",
         "hexo": "^4.2.1",
         "hexo-admin": "^2.3.0",
         "hexo-algolia": "^1.3.2",
