--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "acorn": "^7.3.1",
         "ajv": "^6.10.2",
         "eslint": "^6.5.1",
+        "gitalk": "^1.8.0",
         "gitment": "^0.0.3",
         "hexo": "^4.2.1",
         "hexo-admin": "^2.3.0",
@@ -28,11 +29,13 @@
         "hexo-generator-sitemap": "^2.2.0",
         "hexo-generator-tag": "^1.0.0",
         "hexo-helper-qrcode": "^1.0.2",
+        "hexo-next-valine": "github:next-theme/hexo-next-valine",
         "hexo-renderer-ejs": "^1.0.0",
         "hexo-renderer-marked": "^2.0.0",
         "hexo-renderer-stylus": "^2.1.0",
         "hexo-server": "^1.0.0",
         "hexo-uuid": "^1.0.2",
-        "hexo-wordcount": "^6.0.1"
+        "hexo-wordcount": "^6.0.1",
+        "valine": "^1.5.1"
     }
 }
