--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -175,7 +175,7 @@ toc:
   enable: true
 
   # Automatically add list number to toc.
-  number: true
+  number: false
 
   # If true, all words will placed on next lines if header width longer then sidebar width.
   wrap: true
@@ -670,13 +670,13 @@ valine:
   enable: true # 设置为true，默认为false
   appid: CSoj0H4zAhO6mczwUbRH2MXq-gzGzoHsz # 将应用key的App ID设置在这里
   appkey: bHikuasaTpYy6LWbcaW8JAiF # 将应用key的App Key设置在这里
-  notify: false # 邮箱通知 , https://github.com/xCss/Valine/wiki，默认为false
-  verify: true # 验证码 默认为false
+  notify: true # 邮箱通知 , https://github.com/xCss/Valine/wiki，默认为false
+  verify: false # 验证码 默认为false
   placeholder: 写下你的想法 ^_^ # 初始化评论显示，根据自己修改，这里默认，
-  avatar: monsterid # 头像风格，默认为mm，可进入网址：https://valine.js.org/visitor.html查看头像设置，这里有许多头像风格，进行设置
+  avatar: monsterid # 头像风格，默认为mm，可进入网址：https://valine.js.org/visitor.html 查看头像设置，这里有许多头像风格，进行设置
   guest_info: nick,mail,link # 自定义评论标题
   pageSize: 10 # 分页大小，10页就自动分页
-  visitor: true # 是否允许游客评论 ，进入官网查看设置：https://valine.js.org/visitor.html
+  visitor: false # 是否允许游客评论 ，进入官网查看设置：https://valine.js.org/visitor.html
   comment_count: true # If false, comment count will only be displayed in post page, not in home page
   recordIP: true # Whether to record the commenter IP
 
