--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ highlight: #代码块的设置
   enable: true
   line_number: true
   auto_detect: true
-  tab_replace:
+  tab_replace: true
 
 # Category & Tag 分类 & 标签
 default_category: uncategorized #默认分类
@@ -62,7 +62,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 100
 pagination_dir: page
 
 # Extensions
