--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -312,6 +312,7 @@ han: false
 
 # Baidu Analytics ID
 baidu_analytics: 85c063245825f8a02c40f450c05f5d86
+baidu_site_verification: code-CycccvLKGr
 
 # Duoshuo ShortName
 #duoshuo_shortname:
