--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -178,7 +178,7 @@ toc:
   number: true
 
   # If true, all words will placed on next lines if header width longer then sidebar width.
-  wrap: true
+  wrap: false
 
 
 # Creative Commons 4.0 International License.
