--- a/.github/workflows/server-pages.yml
+++ b/.github/workflows/server-pages.yml
@@ -2,7 +2,7 @@ name: Deploy to Tencent Cloud
 
 on:
   push:
-    branches: [ master ]  # 触发分支，根据你的仓库调整
+    branches: [ master, hexo ]  # 触发分支，根据你的仓库调整
 
 jobs:
   build-and-deploy:
